# genetic-smb-nes

./: AUTHORS  Makefile.am  README  configure.ac
doc/: Doxyfile
src/: init.cc
src/genetic/: Makefile.am  gene.cc  gene.hh  individual.cc  individual.hh  population.cc  population.hh
